force-app/main/default/objects/Supplier_Application__c/Supplier_Application__c.object-meta.xml
<CustomObject>
    <description>Onboarding application submitted by or on behalf of a supplier Account.</description>
    <label>Supplier Application</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>