force-app/main/default/objects/Supplier_Application__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Supplier Account this application belongs to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Applications</relationshipLabel>
    <relationshipName>Supplier_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>