force-app/main/default/objects/Supplier_Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Supplier</fullName>
                <default>true</default>
                <label>New Supplier</label>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
            <value>
                <fullName>Category Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>