force-app/main/default/objects/Supplier_Application__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Supplier Applications Reviewed</relationshipLabel>
    <relationshipName>Supplier_Applications_Reviewed</relationshipName>
    <type>Lookup</type>
</CustomField>