force-app/main/default/objects/Supplier_Application__c/validationRules/Approved_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Requires_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, "Approved") &amp;&amp; ISBLANK(Approved_Date__c)</errorConditionFormula>
    <errorDisplayField>Approved_Date__c</errorDisplayField>
    <errorMessage>Approved Date is required when Status is Approved.</errorMessage>
</ValidationRule>